# rustcast

./: .gitignore  README.md
flux/: .gitignore  Cargo.toml  README.md  rustfmt.toml
flux-web/: go.mod  go.sum  main.go  viewer.go
flux-web/ui/: package-lock.json  package.json
flux-web/ui/app/: globals.css  layout.tsx  page.tsx
flux-web/ui/lib/: webrtc-client.ts
flux/crates/flux-audio/: Cargo.toml
flux/crates/flux-audio/src/: encoder.rs  lib.rs  traits.rs
flux/crates/flux-audio/src/capture/: mod.rs  pipewire.rs  wasapi.rs
flux/crates/flux-capture/: Cargo.toml
flux/crates/flux-capture/src/: bridge.rs  cursor.rs  lib.rs  mock.rs  pipewire_source.rs  portal.rs  session.rs  traits.rs
flux/crates/flux-capture/src/backend/: drm.rs  dxgi.rs  mod.rs  pipewire.rs
flux/crates/flux-client/: Cargo.toml
flux/crates/flux-client/src/: decoder.rs  main.rs  receiver.rs  renderer.rs
flux/crates/flux-core/: Cargo.toml
flux/crates/flux-core/src/: capability.rs  config.rs  cursor.rs  error.rs  frame.rs  lib.rs  platform.rs  types.rs
flux/crates/flux-crypto/: Cargo.toml
flux/crates/flux-crypto/src/: auth.rs  cert.rs  cipher.rs  lib.rs
flux/crates/flux-encode/: Cargo.toml
flux/crates/flux-encode/src/: color.rs  import.rs  lib.rs  traits.rs
flux/crates/flux-encode/src/backend/: mod.rs  nvenc.rs  software.rs  vulkan.rs
flux/crates/flux-encode/src/backend/amf/: constants.rs  encoder.rs  ffi.rs
flux/crates/flux-encode/src/backend/ffmpeg/: mod.rs  real.rs  stub.rs
flux/crates/flux-encode/src/backend/vaapi/: mod.rs  real.rs  stub.rs
flux/crates/flux-input/: Cargo.toml
flux/crates/flux-input/src/: backend.rs  events.rs  gamepad.rs  keyboard.rs  keymap.rs  lib.rs  mouse.rs  portal_input.rs  sink.rs
flux/crates/flux-protocol/: Cargo.toml
flux/crates/flux-protocol/src/: lib.rs  messages.rs  session.rs  version.rs
flux/crates/flux-server/: Cargo.toml
flux/crates/flux-server/src/: http.rs  main.rs  pipeline.rs  session.rs  tray.rs
flux/crates/flux-transport/: Cargo.toml
flux/crates/flux-transport/src/: fec.rs  lib.rs  packetizer.rs  quic.rs  rtp.rs
flux/docs/: architecture.md
