[package]
name = "flux-audio"
description = "Audio capture and encoding for Flux: WASAPI (Windows), PipeWire/PulseAudio (Linux), Opus codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
byteorder = { workspace = true }
