[package]
name = "flux-capture"
description = "Screen capture backends for Flux: DXGI (Windows) and PipeWire/DRM (Linux)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
