[package]
name = "flux-crypto"
description = "Cryptographic primitives for Flux: TLS certificates, AES-GCM encryption, PIN-based pairing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ring = { workspace = true }
aes-gcm = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
