[package]
name = "flux-encode"
description = "GPU-accelerated video encoding backends for Flux: NVENC, AMF, VA-API, Vulkan Video"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ash = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }

[features]
default = []
# Real Linux encoder backends. The libva bindings are attached as optional
# deps in Phase 2; the GpuFrameImport scaffolding lands first under these flags.
encoder-vaapi = []
encoder-vulkan = []
# Optional FFmpeg VA-API backend for breadth/debugging (Phase 4+).
encoder-ffmpeg = []

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
windows = { workspace = true }
