[package]
name = "flux-server"
description = "Flux remote streaming server (host) — captures, encodes, and streams the desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flux-server"
path = "src/main.rs"

[features]
default = ["tray"]
# System-tray icon. Pulls in tray-icon/muda, which link GTK/X11 (`libxdo`) on
# Linux. Disable it (`--no-default-features`) for a headless or Wayland-pure
# host that should not depend on those libraries.
tray = ["dep:tray-icon", "dep:muda"]
# Forward the Linux-only real capture/encode backends so the pipeline can probe
# live portal + VA-API capabilities (otherwise it runs on the base probe).
capture-pipewire = ["flux-capture/capture-pipewire"]
encoder-vaapi = ["flux-encode/encoder-vaapi"]
encoder-ffmpeg = ["flux-encode/encoder-ffmpeg"]

[dependencies]
flux-core = { workspace = true }
flux-capture = { workspace = true }
flux-encode = { workspace = true }
flux-audio = { workspace = true }
flux-input = { workspace = true }
flux-transport = { workspace = true }
flux-crypto = { workspace = true }
flux-protocol = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
